# cufp-metaprogramming-tutorial

./: .gitignore  Makefile  README  description  index.html  index.markdown  outline.markdown
doc/ocaml/: Camlp4Ast.partial.ml.html  Camlp4Ast2OCamlAst.ml.html  Camlp4AstPartial.ml.html  Camlp4OCamlParser.ml.html  Camlp4OCamlRevisedParser.ml.html  Sig.ml.html  ast.html  revised.html  style.css
exercises/haskell/json-quot/: json-quot.cabal  test-JSON-quotes.hs
exercises/haskell/json-quot/Data/Object/Json/: QQ.hs
exercises/haskell/tuple/: tuple.cabal  tuple.html
exercises/haskell/tuple/Data/Tuple/: TH.hs
exercises/haskell/zipper/: Zipper.hs  ZipperTest.hs  run.sh  zipper.html
exercises/ocaml/json_quot/: META  index.html  jq_ast.ml  jq_ast.ml.expanded  jq_ast.mli  jq_parser.mli  jq_printer.ml  jq_quotations.ml  json_quot.mllib
exercises/ocaml/tuple_map/: index.html  tuple_map.ml
exercises/ocaml/zipper/: _tags  index.html  test.ml  zipper.ml
haskell/Data/Tuple/: TH.hs
ocaml/json_compr/: JsonComprehension.ml  META  Makefile  README  TODO  myocamlbuild.ml
ocaml/json_quot/: META  TODO  _tags  jq_ast.ml  jq_ast.mli  jq_lexer.ml  jq_parser.ml  jq_parser.mli  jq_printer.ml  jq_printer.mli  jq_quotations.ml  json.ml  json_quot.mllib
ocaml/tuple_map/: META  Makefile  _tags  myocamlbuild.ml  tuple_map.ml
ocaml/zipper/: zipper.ml
slides/: Makefile  cufp-metaprogramming-tutorial-slides.cabal  cufp-metaprogramming-tutorial-slides.hs
solutions/haskell/json-quot/: json-quot.html  json-quot.markdown
solutions/haskell/tuple/: test.hs  tuple.markdown
(+38 files in other folders)
