Name:           cufp-metaprogramming-tutorial-slides
Cabal-Version:  >= 1.2
Version:        0.1
Copyright:      (c) Nicolas Pouillard
Author:         Nicolas Pouillard
Maintainer:     Nicolas Pouillard <nicolas.pouillard@gmail.com>
Build-Type:     Simple

executable cufp-metaprogramming-tutorial-slides
    Build-depends: base>=3.0&&<5, containers>=0.1, base-unicode-symbols,
                   transformers, monads-fd, uniplate>=1.2, hlatex
    main-is: cufp-metaprogramming-tutorial-slides.hs
    ghc-options: -Wall
