Name:           json-quot
Cabal-Version:  >= 1.2
Version:        0.1
Copyright:      (c) Nicolas Pouillard
Author:         Nicolas Pouillard
Maintainer:     Nicolas Pouillard <nicolas.pouillard@gmail.com>
Build-Type:     Simple

Library
    Build-depends: base>=3.0&&<5, data-object, data-object-json,
                   template-haskell, th-lift,
                   utf8-string, bytestring, parsec>=3.1
    Exposed-modules: Data.Object.Json.QQ
-- Data.Object.Json.DecodeParsec
