Name:           tuple
Cabal-Version:  >= 1.2
Version:        0.1
Copyright:      (c) Nicolas Pouillard
Author:         Nicolas Pouillard
Maintainer:     Nicolas Pouillard <nicolas.pouillard@gmail.com>
Build-Type:     Simple

Library
    Build-depends: base>=3.0&&<5, template-haskell
    Exposed-modules: Data.Tuple.TH
